@@ -71,6 +71,15 @@ options replace the global options (program default "yes", append options).
 .B logging
 .br
 set default log level "none", "verbose" or "debug" (program default "none").
+.TP
+.B force_standard_program_map_env
+.br
+override the use of a prefix with standard environment variables when a
+program map is executed. Since program maps are run as the privileded
+user setting these standard environment variables opens automount(8) to
+potential user privilege escalation when the program map is written in a
+language that can load components from, for example, a user home directory
+(program default "no").
 .SS LDAP Configuration
 .P
 Configuration settings available are:
